--- a/style.css
+++ b/style.css
@@ -23,3 +23,24 @@ p {
 #destaque {
     font-weight: bold;
 }
+
+.foto-link {
+    font-size: 30px;
+    color: blueviolet;
+}
+
+.blog-link {
+    font-size: 25px;
+    color: tomato;
+}
+
+.descr-link {
+    font-size: 35px;
+    color: yellow;
+}
+
+.hab-link {
+    font-size: 50px;
+    font-style: italic;
+    color: teal;
+}
