Adiciona alterações na lista de habilidades

--- a/style.css
+++ b/style.css
@@ -24,6 +24,32 @@ p {
     font-weight: bold;
 }
 
+.comunic {
+    font-size: xx-large;
+    color: coral;
+    font-style: oblique;
+}
+
+.criat {
+    font-size: large;
+    color: crimson;
+}
+
+.lid {
+    font-size: medium;
+    color: darkgreen;
+}
+
+.gestp {
+    font-size: small;
+    color: sienna;
+}
+
+.int {
+    font-size: smaller;
+    color: darkgray ;
+}
+
 .foto-link {
     font-size: 30px;
     color: blueviolet;
