Adiciona estilos de caixa ao portfólio

--- a/style.css
+++ b/style.css
@@ -70,3 +70,13 @@ p {
     font-style: italic;
     color: teal;
 }
+
+#first-div {
+    display: inline;
+}
+
+#first-div-01 {
+    width: 100px;
+    height: 100px;
+    display: inline;
+}
