--- a/style.css
+++ b/style.css
@@ -73,10 +73,27 @@ p {
 
 #first-div {
     display: inline;
+    text-align: center;
 }
 
-#first-div-01 {
-    width: 100px;
+#first-div-02 {
+    width: 500px;
+    height: 435px;
+    padding: 10px;
+    background-color: bisque;
+}
+
+#first-div-03 {
+    margin-left: 550px;
+    margin-top: -470px;
+    width: 300px;
     height: 100px;
-    display: inline;
+}
+.habilidades {
+    margin-top: 400px;
+}
+
+ul li:nth-of-type(odd) {
+    background-color: aqua;
+    font-style: italic;
 }
